# apurba_tts

./: .gitignore  README.md  config.yaml  inference_notebook.ipynb  main.py  pyproject.toml  requirements.txt  streaming_server.py  webui_gradio.py  webui_streaming.html
cli/: SparkTTS.py
