[project]
name = "apurba-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "bitsandbytes>=0.49.0",
    "cut-cross-entropy>=25.1.1",
    "datasets==4.3.0",
    "einops>=0.8.1",
    "einx>=0.3.0",
    "fastapi>=0.128.0",
    "huggingface-hub>=0.34.0",
    "ipython>=9.9.0",
    "jupyterlab>=4.5.1",
    "omegaconf>=2.3.0",
    "peft>=0.18.0",
    "soundfile>=0.13.1",
    "soxr>=1.0.0",
    "torch>=2.9.1",
    "torchao>=0.15.0",
    "torchaudio>=2.9.1",
    "torchcodec>=0.9.1",
    "torchvision>=0.24.1",
    "transformers==4.56.2",
    "triton>=3.5.1",
    "trl>=0.24.0",
    "unsloth>=2026.1.2",
    "unsloth-zoo>=2026.1.2",
    "uvicorn[standard]>=0.40.0",
    "xformers>=0.0.33.post2",
]
